[tool.poetry]
name = "driver-service"
version = "0.1.0"
description = ""
authors = ["maximkovalev <mkovalev-dev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
psycopg2 = "^2.9.9"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
